--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,13 +1,70 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Portfolio</title>
-        <style>
+<head>
+    <meta charset="utf-8">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="text.css">
+</head>
+<body>
 
-        </style>
-    </head>
-    <body style="background-image: url();">
+<div class="header">
+  <img src="Dee.JPG" alt="look it see" style="display:flex; width:110px; float:left; margin:none"> 
+  <h1>ANANDKUMAR D</h1>
+  <p style=" display:contents; color:darkslategray"><b>SOFTWARE DEVELOPER</b></p>
+</div>
 
-    </body>
+<div class="topnav">
+  <a href="#">Home</a>
+  <a href="#">About</a>
+  <a href="contact.html">contact us</a>
+  <a href="#" style="float:right">Account</a>
+</div>
 
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>PORTFOLIO</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:00px;">Image</div>
+      <p>Some text..</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
+    <div class="card">
+      <h2>EDUCATION</h2>
+      <h3>ANAND INSTITUTE OF HIGHER TECHNOLOGY,2020-2024</h3>
+      <div class="fakeimg" >BE-COMPUTER SCIENCE AND ENGINEERING(CGPA-8.2)</div>
+      <p><strong>KEY SKILLS</strong></p>
+      <p>Java,Python,C programming,HTML AND CSS,Javascript,Exception Handling,Data Structure ,Object,Class,OOPS.</p>
+    </div>
+    
+  </div>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>About Me</h2>
+      <div class="fakeimg" style="height:100px;">Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    </div>
+    <div class="card">
+      <h3>Popular Post</h3>
+      <div class="fakeimg"><p>Image</p></div><br>
+      <div class="fakeimg"><p>Image</p></div><br>
+      <div class="fakeimg"><p>Image</p></div>
+    </div>
+    <div class="card">
+      <h3>Follow Me</h3>
+      <p>Some text..</p>
+    </div>
+  </div>
+</div>
+
+<div class="footer">
+    <div id="copyrig"> All CopyRights&#169 Reserved by Dec2024</div>
+  <h4>ANANDKUMAR D</h2>
+  <a href="https://mail.google.com/mail/u/0/?login#inbox/FMfcgzGxStzcQpwzdhCRnxcjBktHDWQb" title="Email" >d.anandkumar2002@gmail.com</a>
+</div>
+
+</body>
 </html>
+
+
+    
