--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>About</title>
         <style></style>
     </head>
     <body>
         <div class="header">
             <h1>About me !</h1>
-            <img src=""
+            <img src="" alt=""> 
             <div class="header_name">
                 <h1><ins>ABOUT US</ins></h1>
             </div>
