--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<html lang="en">
+    
+    <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <title>Contact</title>
     <style>
         .fulbody {
@@ -25,14 +27,14 @@
         <div class="cont_form">
             <form style="border:soild thin black; box-sizing: border-box;">
 
-                <input type="text" value="First name :" id="fname"
+                <input type="text" value="First name :" id="fname" placeholder="Fname"
                     style="color:black;padding:10px;margin:10px;  background-color:bisque;"><br><br>
 
-                <input type="text" value="Last name :" id="lname"
+                <input type="text" value="Last name :" id="lname"placeholder="Lname"
                     style="color:black;padding:10px;margin:10px;  background-color:bisque;"><br><br>
-                <input type="email" value="Email id :" id="mail"
+                <input type="email" value="Email id :" id="mail"placeholder="mail"
                     style="color:black;padding:10px;margin:10px;  background-color:bisque;"><br><br>
-                <input type="tel" value="Number :" id="tel"
+                <input type="tel" value="Number :" id="tel"placeholder="no"
                     style="color:black;padding:10px;margin:10px;  background-color:bisque;"><br><br>
                 <textarea style="color:black;padding:10px;margin:10px;  background-color:bisque;">Addrees</textarea> <br /><br>
 
