--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    
     <title>Portfolio</title>
     <link rel="stylesheet" href="text.css">
 </head>
