--- a/inline.html
+++ b/inline.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Inline</title>
     </head>
     <body style="background-color: color-mix(in xyz-d50, red 10%, pink 5%);">
