--- a/internal.html
+++ b/internal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="us-en">
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
             color: blue;
             background-color: cadetblue;
             text-shadow: 12px;
-            text-size-adjust: 50%;
+           
             text-align: center;
         }
 
